# werewolf-game

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  setup.py
docs/: 1panel-deploy.md
docs/superpowers/plans/: 2026-05-25-player-avatar-crops.md  2026-06-03-multiplayer-room-lobby.md  2026-06-10-http-polling-multiplayer.md  2026-06-12-desktop-table-layout.md  2026-06-14-mobile-image-loading-optimization.md  2026-06-14-mobile-multiplayer-mvp.md
docs/superpowers/specs/: 2026-05-25-player-avatar-crops-design.md  2026-06-03-multiplayer-room-lobby-design.md  2026-06-10-http-polling-multiplayer-design.md  2026-06-12-desktop-table-layout-design.md  2026-06-14-mobile-image-loading-optimization-design.md  2026-06-14-mobile-multiplayer-mvp-design.md  2026-07-01-desktop-game-background-design.md
src/werewolf_langgraph/: agents.py  game_graph.py  state.py  web.py
src/werewolf_langgraph/static/: app.js  home.html  index.html  styles.css
tests/: test_daytime_role_prompts.py  test_frontend_start_feedback.py  test_image_asset_sizes.py  test_multiplayer_lobby.py  test_package_static_assets.py  test_public_events_chinese.py  test_role_teammates.py  test_site_routing.py  test_vote_turn_order.py  test_web_runtime_config.py
